--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.9",
     "@metaplex-foundation/js": "^0.19.3",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
@@ -24,14 +27,21 @@
     "autoprefixer": "10.4.14",
     "bigint-buffer": "^1.1.5",
     "bn.js": "^5.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lucide-react": "^0.363.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
