--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
