--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@metaplex-foundation/js": "^0.19.3",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/fiber": "^8.16.1",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.31",
@@ -24,6 +28,7 @@
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.163.0",
     "autoprefixer": "10.4.14",
     "bigint-buffer": "^1.1.5",
     "bn.js": "^5.2.1",
@@ -38,15 +43,21 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4"
+    "three": "^0.163.0",
+    "typescript": "5.0.4",
+    "vaul": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "daisyui": "^4.9.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
